# tcp-project

./: CHANGELOG.md  hie.yaml  tcp-project.cabal
app/: Client.hs  Server.hs  Utils.hs
