cabal-version:      3.0
name:               tcp-project
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             hmg3f
maintainer:         hmg3f@umsystem.edu
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    
executable client
    import:           warnings
    main-is:          Client.hs
    other-modules:    Utils
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      bytestring ^>=0.12.1.0,
                      directory >= 1.3.9.0,
                      haskeline ^>=0.8.2.1,
                      network ^>=3.2.4.0,
                      directory ^>=1.3.9.0,
                      text ^>=2.1.2
    hs-source-dirs:   app
    default-language: Haskell2010

executable server
    import:           warnings
    main-is:          Server.hs
    other-modules:    Utils
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      network ^>=3.2.4.0,
                      text ^>=2.1.2,
                      bytestring ^>=0.12.1.0,
                      parsec ^>=3.1.17.0
    hs-source-dirs:   app
    default-language: Haskell2010
